--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+* {
+  background-color: rgb(12, 12, 12);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+img {
+  width: 100%;
+  height: 25vh;
+  object-fit: cover;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+  cursor: pointer;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h3 {
+  color: rgb(148, 146, 131);
+  font-size: 0.8rem;
+  font-weight: 450;
+  cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
+.filter-container button {
+  color: rgb(247, 8, 8);
+  padding: 0.5rem 0.8rem;
+  min-width: 5rem;
+  border-radius: 20px;
+  margin-bottom: 2rem;
+  cursor: pointer;
+  background-color: rgb(29, 23, 23);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button.active {
+  background-color: antiquewhite;
+  color: black;
 }
